--- a/scss/custom-bootstrap.scss
+++ b/scss/custom-bootstrap.scss
@@ -1,4 +1,11 @@
 /* insert changes to variables here */
 /* refer to bootstrap-4.0.0-alpha/scss/variables to see what you can override */
 
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+
+$btn-primary-bg: #ff33cc;
+$font-family-base: 'Roboto Condensed';
+$gray-lightest: violet;
+
 @import '../bootstrap-4.0.0-alpha/scss/bootstrap';
